# bosworth

./: .gitignore  README.md  mypy.ini  paths.py  pyproject.toml  setup.sh
bosworth/: agent.py  app.py  graph.py  llm.py  ollama_models.py  tools.py
bosworth/app/: main.py
evals/: core.py  evaluators.py  run_evals.py  runner.py
evals/data/: examples.json
scripts/: bosworth.py
test/: conftest.py  test_app.py  test_evals.py
test/evals/: test_core.py  test_evaluators.py
