[project]
name = "bosworth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "langchain-core>=0.3.68",
    "langchain-ollama>=0.3.4",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
